--- a/app/src/main/res/layout/activity_set_profile_activity.xml
+++ b/app/src/main/res/layout/activity_set_profile_activity.xml
@@ -52,12 +52,19 @@
             android:hint="@string/age_txt"
             android:padding="@dimen/view_padding"
             android:inputType="number"/>
+        <AutoCompleteTextView
+            android:id="@+id/gender_txtview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/age_edit_txt"
+            android:hint="@string/gender_txt"
+            android:padding="@dimen/view_padding"/>
 
         <EditText
             android:id="@+id/weight_edit_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/age_edit_txt"
+            android:layout_below="@+id/gender_txtview"
             android:hint="@string/current_weight_txt"
             android:padding="@dimen/view_padding"
             android:inputType="number"/>
@@ -70,31 +77,16 @@
             android:hint="@string/target_weight_txt"
             android:padding="@dimen/view_padding"/>
 
-        <Spinner
-            android:id="@+id/gender_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/target_weight_txt"
-            android:padding="@dimen/view_padding"/>
-        <View
-            android:id="@+id/hr"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/mycolor"
-            android:layout_below="@id/gender_spinner"/>
+
 
         <Button
-            android:id="@+id/btn_continue"
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/gender_spinner"
+            android:layout_below="@+id/target_weight_txt"
             android:layout_marginVertical="@dimen/view_padding"
             android:layout_alignParentEnd="true"
-
             android:text="@string/save_btn"/>
-
-
-
     </RelativeLayout>
 
 </ScrollView>
