--- a/app/src/main/res/layout/nav_header_locations_in__africa.xml
+++ b/app/src/main/res/layout/nav_header_locations_in__africa.xml
@@ -21,16 +21,11 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/name_txt_view"
-        android:layout_width="match_parent"
+        android:id="@+id/email_txt_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-
-        android:id="@+id/email_txt_viewtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
