--- a/app/src/main/res/layout/activity_sign_up_activity.xml
+++ b/app/src/main/res/layout/activity_sign_up_activity.xml
@@ -6,11 +6,13 @@
     tools:context=".activities.login_activity">
 
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_horizontal"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="70dp">
+
         <!--sign up form-->
         <EditText
             android:id="@+id/name_edit_txt"
@@ -24,7 +26,7 @@
             android:id="@+id/email_edit_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/name_edit_txt"
+            android:layout_below="@+id/name_edit_txt"
             android:hint="@string/email_edit_txt"
             android:inputType="textEmailAddress"
             android:padding="@dimen/view_padding" />
